--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -8,6 +8,6 @@
     <title>Inesh Dey</title>
 </head>
 <body>
-    <h1>Remaking site with vercel because I have nothing else to do</h1>
+    <h1>Deploying site with vercel because I have nothing else to do</h1>
 </body>
 </html>
