initial design + colors

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inesh Dey</title>
+    <title>Somebody4545</title>
+    <link rel="stylesheet" href="/static/css/index.css">
 </head>
+
 <body>
-    <h1>Deploying site with vercel because I have nothing else to do</h1>
+    <div class="wide-box">
+        <div class="center-text">
+            <h1>Hi</h1>
+            <p>this is a website</p>
+            <button><h3>Go to (slightly more) functional site</h3></button>
+        </div>
+    </div>
+    <div class="wide-box secondary">
+        <div class="center-text">
+            <h1>Projects</h1>
+            <p>in progress</p>
+        </div>
+    </div>
 </body>
+
 </html>
