--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -15,7 +15,7 @@
         <div class="center-text">
             <h1>Hi</h1>
             <p>this is a website</p>
-            <button><h3>Go to (slightly more) functional site</h3></button>
+            <a href="https://somebody4545.repl.co"><button><h3>Go to (slightly more) functional site</h3></button></a>
         </div>
     </div>
     <div class="wide-box secondary">
