--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -24,6 +24,18 @@
             <p>in progress</p>
         </div>
     </div>
+    <div class="wide-box">
+        <div class="center-text">
+            <h1>Why</h1>
+            <p>good question</p>
+        </div>
+    </div>
+    <div class="wide-box secondary">
+        <div class="center-text">
+            <h1>Contact me</h1>
+            <a href="https://github.com/somebody4545"><button><h3>Github</h3></button></a>
+        </div>
+    </div>
 </body>
 
 </html>
