--- a/api/static/css/index.css
+++ b/api/static/css/index.css
@@ -17,10 +17,10 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
 }
 .secondary {
     background-color: var(--secondary);
+    z-index: 5;
 }
 
 .center-text {
@@ -38,4 +38,12 @@ button {
 
 button:hover {
     cursor: pointer;
+}
+
+.canvas-div {
+    align-items: center;
+    position: absolute;
+width: 100%;
+height: 300px;
+z-index: 0;
 }
