--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -25,9 +25,11 @@
         </div>
     </div>
     <div class="wide-box">
+        <div class="canvas-div"><canvas id="canvas3d"></canvas></div>
         <div class="center-text">
-            <h1>Why</h1>
-            <p>good question</p>
+            <h1>Blender?</h1>
+            <p>blender.</p>
+            <h6>(try tapping on this one)</h6>
         </div>
     </div>
     <div class="wide-box secondary">
@@ -36,6 +38,14 @@
             <a href="https://github.com/somebody4545"><button><h3>Github</h3></button></a>
         </div>
     </div>
+    <script async="" src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+    <script type="importmap">
+        {
+          "imports": {
+            "@splinetool/runtime": "https://unpkg.com/@splinetool/runtime@0.9.428/build/runtime.js"
+          }
+        }
+      </script>
+    <script type="module" src="/static/js/3dshenanigans.js"></script>
 </body>
-
 </html>
