--- a/api/static/css/index.css
+++ b/api/static/css/index.css
@@ -8,7 +8,8 @@ body {
     --secondary: #0e1120;
     --accent: #5b78da;
     background-color: var(--background);
-    color: var(--text)
+    color: var(--text);
+      
 }
 
 .wide-box {
@@ -18,6 +19,7 @@ body {
     flex-direction: column;
     justify-content: center;
 }
+
 .secondary {
     background-color: var(--secondary);
     z-index: 5;
@@ -43,7 +45,28 @@ button:hover {
 .canvas-div {
     align-items: center;
     position: absolute;
-width: 100%;
-height: 300px;
-z-index: 0;
+    height: 300px;
+    width:100%;
+    left: 0;
+    z-index: 0;
 }
+
+/* scrollbar stuff */
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: var(--background);
+    display: none;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--primary);
+    border-radius: 5px;
+  }
+
