--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -1,21 +1,20 @@
+{% extends "base.html" %}
+
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Somebody4545</title>
-    <link rel="stylesheet" href="/static/css/index.css">
+<head>
 </head>
 
-<body>
+<body>{% block content %}
     <div class="wide-box">
         <div class="center-text">
             <h1>Hi</h1>
             <p>this is a website</p>
-            <a href="https://somebody4545.repl.co"><button><h3>Go to (slightly more) functional site</h3></button></a>
+            <a href="https://somebody4545.repl.co"><button>
+                    <h3>Go to (slightly more) functional site</h3>
+                </button></a>
         </div>
     </div>
     <div class="wide-box secondary">
@@ -35,9 +34,15 @@
     <div class="wide-box secondary">
         <div class="center-text">
             <h1>Contact me</h1>
-            <a href="https://github.com/somebody4545"><button><h3>Github</h3></button></a>
+            <a href="https://github.com/somebody4545"><button>
+                    <h3>Github</h3>
+                </button></a>
         </div>
     </div>
+
+
+
+
     <script async="" src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
     <script type="importmap">
         {
@@ -47,5 +52,7 @@
         }
       </script>
     <script type="module" src="/static/js/3dshenanigans.js"></script>
+{% endblock content %}
 </body>
+
 </html>
