--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -17,10 +17,10 @@
                 </button></a>
         </div>
     </div>
-    <div class="wide-box secondary">
+    <div class="wide-box secondary extend">
         <div class="center-text">
             <h1>Projects</h1>
-            <p>in progress</p>
+            <div class="small-box"><p class="wip">in progress</p></div>
         </div>
     </div>
     <div class="wide-box">
