--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -16,6 +16,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Somebody4545">
+    <meta name="description" content="A website for my stuff. Currently in progress.">
+    <meta name="keywords" content="somebody4545, gaming, coding, programming">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta property="og:title" content="Somebody4545" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="{{ url_for(request.endpoint, **request.view_args) }}" />
+    <meta property="og:image" content="https://s4545.eu.org/static/favicon/android-chrome-384x384.png" />
+    <meta property="og:description" content="A website for my stuff. Currently in progress." />
+    <meta name="theme-color" content="#60ff90" />
+
     <title>Somebody4545</title>
     <link rel="stylesheet" href="/static/css/index.css">
     {% block head %}
