--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -20,19 +20,11 @@
     <div class="wide-box secondary extend">
         <div class="center-text">
             <h1>Projects</h1>
-            <div class="small-box">
-                <div class="project">
-                        <div><canvas id="FlowMaster"></canvas></div>
-                        <h3>FlowMaster</h3>
-                        <p>Made with <a href="https://github.com/anirudhnara">Anirudh</a>, <a href="https://github.com/ElectroChess">Pranith</a>, and <a href="https://github.com/AliMacky">Ali</a> for HackPNW 2023</p>
-                        <a href="https://flowmaster.mythify.repl.co/"><button>See it!</button></a>
-                </div>
-                <p>more projects coming here soon!</p>
-            </div>
+            <div class="small-box"><p class="wip">in progress</p></div>
         </div>
     </div>
     <div class="wide-box">
-        <div class="canvas-div"><canvas id="blender"></canvas></div>
+        <div class="canvas-div"><canvas id="canvas3d"></canvas></div>
         <div class="center-text">
             <h1>Blender?</h1>
             <p>blender.</p>
@@ -60,7 +52,7 @@
         }
       </script>
     <script type="module" src="/static/js/3dshenanigans.js"></script>
-    {% endblock content %}
+{% endblock content %}
 </body>
 
 </html>
