--- a/api/static/css/index.css
+++ b/api/static/css/index.css
@@ -86,6 +86,8 @@ button:active {
 .project {
     text-align: left;
     overflow: auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 .project button {
     font-size: 12pt;
