--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -5,6 +5,17 @@
 
 
 <head>
+    {% block head %}
+    <script async="" src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+    <script type="importmap">
+        {
+          "imports": {
+            "@splinetool/runtime": "https://unpkg.com/@splinetool/runtime@0.9.428/build/runtime.js"
+          }
+        }
+      </script>
+    <script type="module" src="/static/js/3dshenanigans.js"></script>
+    {% endblock head %}
 </head>
 
 <body>{% block content %}
@@ -22,17 +33,22 @@
             <h1>Projects</h1>
             <div class="small-box">
                 <div class="project">
-                        <div><canvas id="FlowMaster"></canvas></div>
+                        <div><canvas id="FlowMaster" loading="eager"></canvas></div>
                         <h3>FlowMaster</h3>
                         <p>Made with <a href="https://github.com/anirudhnara">Anirudh</a>, <a href="https://github.com/ElectroChess">Pranith</a>, and <a href="https://github.com/AliMacky">Ali</a> for HackPNW 2023</p>
                         <a href="https://flowmaster.mythify.repl.co/"><button>See it!</button></a>
                 </div>
-                <p>more projects coming here soon!</p>
+                <div class="project">
+                    <div><canvas id="DCR" loading="eager"></canvas></div>
+                    <h3>DCR (in progress)</h3>
+                    <p>Old monitor doesnt have DCR? Try this! Made this because I needed it but couldn't find it online.</p>
+                    <a href="https://github.com/somebody4545/DCR"><button>See it!</button></a>
+                </div>
             </div>
         </div>
     </div>
     <div class="wide-box">
-        <div class="canvas-div"><canvas id="blender"></canvas></div>
+        <div class="canvas-div"><canvas id="blender" loading="eager"></canvas></div>
         <div class="center-text">
             <h1>Blender?</h1>
             <p>blender.</p>
@@ -47,19 +63,6 @@
                 </button></a>
         </div>
     </div>
-
-
-
-
-    <script async="" src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
-    <script type="importmap">
-        {
-          "imports": {
-            "@splinetool/runtime": "https://unpkg.com/@splinetool/runtime@0.9.428/build/runtime.js"
-          }
-        }
-      </script>
-    <script type="module" src="/static/js/3dshenanigans.js"></script>
     {% endblock content %}
 </body>
 
