--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -41,7 +41,7 @@
                 <div class="project">
                     <div><canvas id="DCR" loading="eager"></canvas></div>
                     <h3>DCR (in progress)</h3>
-                    <p>Old monitor doesnt have DCR? Try this! Made this because I needed it but couldn't find it online.</p>
+                    <p>Old monitor doesn't have DCR? Try this! Made this because I needed it but couldn't find it online.</p>
                     <a href="https://github.com/somebody4545/DCR"><button>See it!</button></a>
                 </div>
             </div>
