--- a/api/static/css/index.css
+++ b/api/static/css/index.css
@@ -129,3 +129,13 @@ div canvas {
     border-radius: 5px;
   }
 
+  
+@media (max-width: 1000px) {
+    .project div {
+        float: none;
+        /* vertical center */
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
