--- a/api/static/css/index.css
+++ b/api/static/css/index.css
@@ -106,6 +106,11 @@ div canvas {
     height: 0;
     width: 0;
 }
+
+.see {
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
 /* scrollbar stuff */
 /* width */
 ::-webkit-scrollbar {
