BIG project text

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -34,13 +34,13 @@
             <div class="small-box">
                 <div class="project">
                         <div><canvas id="FlowMaster" loading="eager"></canvas></div>
-                        <h3>FlowMaster</h3>
+                        <h2>FlowMaster</h2>
                         <p>Made with <a href="https://github.com/anirudhnara">Anirudh</a>, <a href="https://github.com/ElectroChess">Pranith</a>, and <a href="https://github.com/AliMacky">Ali</a> for HackPNW 2023</p>
                         <a href="https://flowmaster.mythify.repl.co/"><button class="see">See it!</button></a>
                 </div>
                 <div class="project">
                     <div><canvas id="DCR" loading="eager"></canvas></div>
-                    <h3>DCR (in progress)</h3>
+                    <h2>DCR <h3 style="display: inline; ">(in progress)</h3></h2>
                     <p>Old monitor doesn't have DCR? Try this! Made this because I needed it but couldn't find it online.</p>
                     <a href="https://github.com/somebody4545/DCR" ><button class="see">See it!</button></a>
                 </div>
