--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="project">
                     <div><canvas id="DCR" loading="eager"></canvas></div>
-                    <h2>DCR <h3 style="display: inline; ">(in progress)</h3></h2>
+                    <h2>DCR (in progress)</h2>
                     <p>Old monitor doesn't have DCR? Try this! Made this because I needed it but couldn't find it online.</p>
                     <a href="https://github.com/somebody4545/DCR" ><button class="see">See it!</button></a>
                 </div>
