--- a/api/static/css/index.css
+++ b/api/static/css/index.css
@@ -6,9 +6,14 @@ body {
     --background: #0b0d19;
     --primary: #60ff90;
     --secondary: #0e1120;
+    --secondary-rgba: rgba(14, 17, 32, 0.9);
     --accent: #5b78da;
-    background-color: var(--background);
+    background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url("/static/images/layered-waves-haikei.svg");
+    background-size: 100% 120vh;
+    background-attachment: fixed;
+    /* background-attachment: fixed; */
     color: var(--text);
+    padding-bottom: 50px;
 }
 
 a {
@@ -18,7 +23,7 @@ h1 {
     text-shadow: 1px 3px 30px var(--accent);
 }
 .wide-box {
-    width: 100%;
+    width: auto;
     height: 300px;
     display: flex;
     flex-direction: column;
@@ -33,16 +38,19 @@ h1 {
 
 .small-box {
     background-color: var(--background);
-    margin: 20px 20% 20px 20%;
+    margin: 100px 20% 50px 20%;
     padding: 50px 10% 50px 10%;
     width: auto;
     border-radius: 10px;
 }
 
 .secondary {
-    background-color: var(--secondary);
+    background-color: var(--secondary-rgba);
     z-index: 5;
     box-shadow: 0 0px 80px 0px var(--secondary);
+    border-radius: 25px;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .center-text {
