--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -13,7 +13,8 @@
             "@splinetool/runtime": "https://unpkg.com/@splinetool/runtime@0.9.455/build/runtime.js"
           }
         }
-      </script>
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script type="module" src="/static/js/3dshenanigans.js"></script>
     {% endblock head %}
 </head>
@@ -63,6 +64,16 @@
                 </button></a>
         </div>
     </div>
+    <script src="/static/js/parallaxbg.js"></script>
+    <script async="" src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+    <script type="importmap">
+        {
+          "imports": {
+            "@splinetool/runtime": "https://unpkg.com/@splinetool/runtime@0.9.455/build/runtime.js"
+          }
+        }
+    </script>
+    <script type="module" src="/static/js/3dshenanigans.js"></script>
     {% endblock content %}
 </body>
 
