--- a/api/static/css/index.css
+++ b/api/static/css/index.css
@@ -8,14 +8,35 @@ body {
     --secondary: #0e1120;
     --secondary-rgba: rgba(14, 17, 32, 0.9);
     --accent: #5b78da;
+
+    margin: 0;
+    padding: 0;
+    font-family: 'Inter', sans-serif;
+    background-color: var(--background);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: var(--text);
+    overflow-x: hidden;
+    
+}
+.page {
+    background-color: var(--background);
     background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url("/static/images/layered-waves-haikei.svg");
     background-size: 100% 120vh;
     background-attachment: fixed;
     /* background-attachment: fixed; */
     color: var(--text);
     padding-bottom: 50px;
+    opacity: 0;
+    transition: opacity 0.5s;
+    overflow: hidden;
 }
-
+.page.visible {
+    opacity: 1;
+    transition: opacity 0.5s;
+    overflow: auto;
+}
 a {
     color: var(--primary);
 }
@@ -151,4 +172,23 @@ div canvas {
         margin-right: auto;
     }
 }
+#loading {
+    display: flex;
+    position: fixed;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background-color: var(--background);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
 
+.loadcenter {
+    margin: auto;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
