--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -18,7 +18,7 @@
                 <h1>Hi</h1>
                 <p>this is a website</p>
                 <a href="https://somebody4545.repl.co"><button>
-                        <h3>Go to (slightly more) functional site</h3>
+                        <h3>Go to old site</h3>
                     </button></a>
             </div>
         </div>
