--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -60,6 +60,11 @@
                     </button></a>
             </div>
         </div>
+        <div class="wide-box secondary copyright">
+            <div class="center-text">
+                <a href="https://github.com/somebody4545/website2.0/blob/main/LICENSE.md"><p>© 2023 Inesh Dey under GPLv3</p></a>
+            </div>
+        </div>
     </div>
     <script src="/static/js/load.js"></script>
     <script src="/static/js/parallaxbg.js"></script>
