loading.io loader

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>{% block content %}
-    <div id="loading"><div class="loadcenter"><h1>Just a sec...</h1><p>This website utilizes 3d effects and requires Javascript</p></div></div>
+    <div id="loading"><div class="loadcenter"><div class="loader"><div class="lds-ring"><div></div><div></div><div></div><div></div></div></div><br><h1>Just a sec</h1><p>This website utilizes 3d effects and requires Javascript</p></div></div>
     <div class="page" id="page">
         <div class="wide-box">
             <div class="center-text">
