Crap ton of refactoring

--- a/api/static/css/index.css
+++ b/api/static/css/index.css
@@ -21,10 +21,11 @@ body {
     overflow-x: hidden;
 
 }
+
 html {
     scroll-behavior: smooth;
-  }
-  
+}
+
 
 .page {
     background-color: var(--background);
@@ -71,8 +72,10 @@ h1 {
     justify-content: center;
     scroll-margin-top: 125px;
 }
+
 .header {
-    position: -webkit-sticky; /* Safari */
+    position: -webkit-sticky;
+    /* Safari */
     position: sticky;
     top: 25px;
     margin-top: 50px;
@@ -84,6 +87,7 @@ h1 {
     padding-left: 10px;
     padding-right: 50px;
 }
+
 @media (max-width: 1000px) {
     .header {
         display: none;
@@ -96,28 +100,32 @@ h1 {
     flex-direction: row;
     justify-content: left;
 }
+
 .left * {
-    height:75px;
+    height: 75px;
     margin: 0 0 0 0;
     max-width: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
+
 .right {
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: right;
 }
+
 .right * {
-    height:75px;
+    height: 75px;
     margin: 0 10px 0 10px;
     max-width: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
+
 .extend {
     height: auto;
     padding-top: 25px;
@@ -303,11 +311,13 @@ div canvas {
     text-align: left;
 
 }
+
 /* https://loading.io/css/ */
 .loader {
     margin-left: auto;
     margin-right: auto;
 }
+
 .lds-ring {
     display: inline-block;
     position: relative;
