--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -3,42 +3,42 @@
 
 <head>
     {% block favicon %}
-    <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/static/favicon/site.webmanifest">
-    <link rel="mask-icon" href="/static/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="/static/favicon/favicon.ico">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="/static/favicon/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
+    <link href="/static/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+    <link href="/static/favicon/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+    <link href="/static/favicon/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+    <link href="/static/favicon/site.webmanifest" rel="manifest">
+    <link color="#5bbad5" href="/static/favicon/safari-pinned-tab.svg" rel="mask-icon">
+    <link href="/static/favicon/favicon.ico" rel="shortcut icon">
+    <meta content="#da532c" name="msapplication-TileColor">
+    <meta content="/static/favicon/browserconfig.xml" name="msapplication-config">
+    <meta content="#ffffff" name="theme-color">
     {% endblock favicon %}
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="Somebody4545">
-    <meta name="description" content="A website for my stuff. Currently in progress.">
-    <meta name="keywords" content="somebody4545, gaming, coding, programming">
-    <meta name="robots" content="index, follow">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="language" content="English">
-    <meta property="og:title" content="Somebody4545" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="{{ url_for(request.endpoint, **request.view_args) }}" />
-    <meta property="og:image" content="https://s4545.eu.org/static/favicon/android-chrome-384x384.png" />
-    <meta property="og:description" content="A website for my stuff. Currently in progress." />
-    <meta name="theme-color" content="#60ff90" />
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="Somebody4545" name="title">
+    <meta content="A website for my stuff. Currently in progress." name="description">
+    <meta content="somebody4545, gaming, coding, programming" name="keywords">
+    <meta content="index, follow" name="robots">
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+    <meta content="English" name="language">
+    <meta content="Somebody4545" property="og:title"/>
+    <meta content="website" property="og:type"/>
+    <meta content="{{ url_for(request.endpoint, **request.view_args) }}" property="og:url"/>
+    <meta content="https://s4545.eu.org/static/favicon/android-chrome-384x384.png" property="og:image"/>
+    <meta content="A website for my stuff. Currently in progress." property="og:description"/>
+    <meta content="#60ff90" name="theme-color"/>
 
     <title>Somebody4545</title>
-    <link rel="stylesheet" href="/static/css/index.css">
+    <link href="/static/css/index.css" rel="stylesheet">
     {% block head %}
     {% endblock head %}
- 
+
 </head>
 
 <body>
-    {% block content %}
-    {% endblock content %}
+{% block content %}
+{% endblock content %}
 </body>
 
 </html>
