Button css styling

--- a/api/static/css/index.css
+++ b/api/static/css/index.css
@@ -179,7 +179,8 @@ h1 {
 button {
     background-color: var(--primary);
     color: var(--background);
-    padding: 0 10px 0 10px;
+    padding: 10px;
+    height: min-content;
     border: none;
     border-radius: 10px;
     box-shadow: 0 0 80px -20px var(--primary);
@@ -355,4 +356,12 @@ div canvas {
     100% {
         transform: rotate(360deg);
     }
+}
+
+h3 img {
+    height: 30px;
+}
+
+h3 {
+    margin: 0;
 }
