--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -84,10 +84,10 @@
     </section>
     <section class="wide-box secondary" id="contact-me">
         <div class="center-text">
-            <h1>Contact me</h1>
+            <h1>Places to Find Me</h1>
             <a href="https://github.com/somebody4545">
                 <button>
-                    <h3>Github</h3>
+                    <h3><img src="https://raw.githubusercontent.com/github/docs/main/assets/images/site/favicon.svg" alt="Github"></h3>
                 </button>
             </a>
         </div>
