--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -35,11 +35,11 @@
         <div class="center-text">
             <h1 id="hi">Hi</h1>
             <p>this is a website</p>
-            <a href="https://somebody4545.repl.co">
-                <button>
-                    <h3>Go to old site</h3>
-                </button>
-            </a>
+            <!--            <a href="https://somebody4545.repl.co">-->
+            <!--                <button>-->
+            <!--                    <h3>Go to old site</h3>-->
+            <!--                </button>-->
+            <!--            </a>-->
         </div>
     </section>
     <section class="wide-box secondary extend" id="projects">
@@ -54,7 +54,17 @@
                     <p>Made with <a href="https://github.com/anirudhnara">Anirudh</a>, <a
                             href="https://github.com/ElectroChess">Pranith</a>, and <a
                             href="https://github.com/AliMacky">Ali</a> for HackPNW 2023</p>
-                    <a href="https://flowmaster.mythify.repl.co/">
+                    <!--                    <a href="https://flowmaster.mythify.repl.co/">-->
+                    <button class="see dead">dead link >:( blame replit</button>
+                    <!--                    </a>-->
+                </div>
+                <div class="project">
+                    <div>
+                        <h3 class="center-text">still working on this model...</h3>
+                    </div>
+                    <h2>Raspberry Pi + Stripe website demo</h2>
+                    <p>Just a fun summer project.</p>
+                    <a href="https://github.com/somebody4545/Raspberry-Pi-Stripe-Demo">
                         <button class="see">See it!</button>
                     </a>
                 </div>
@@ -62,12 +72,32 @@
                     <div>
                         <canvas id="DCR" loading="eager"></canvas>
                     </div>
-                    <h2>DCR (in progress)</h2>
-                    <p>Old monitor doesn't have DCR? Try this! Made this because I needed it but couldn't find it
-                        online.</p>
+                    <h2>DCR</h2>
+                    <p>Old monitor doesn't have Dynamic Contrast Ratio? Try this! Made this for an old monitor to be
+                        repurposed as a TV.</p>
                     <a href="https://github.com/somebody4545/DCR">
                         <button class="see">See it!</button>
                     </a>
+                </div>
+                <div class="project">
+                    <div>
+                        <img src="/static/images/ecocollab.png" style="width:100%" alt="">
+                    </div>
+                    <h2>EcoCollab</h2>
+                    <p>Project for EMP Hackfest's SmartHack. Won best programming award.</p>
+                    <a href="https://devpost.com/software/restoration-hub?ref_content=user-portfolio&ref_feature=in_progress">
+                        <button class="see">See it!</button>
+                    </a>
+                </div>
+                <div class="project">
+                    <div>
+                        <h1 class="center-text">?</h1>
+                    </div>
+                    <h2>Blog (in progress)</h2>
+                    <p>Making a fun blog site coming in the near future</p>
+                    <!--                    <a href="https://devpost.com/software/restoration-hub?ref_content=user-portfolio&ref_feature=in_progress">-->
+                    <button class="see dead">Haha... not yet</button>
+                    <!--                    </a>-->
                 </div>
             </div>
         </div>
@@ -85,11 +115,26 @@
     <section class="wide-box secondary" id="contact-me">
         <div class="center-text">
             <h1>Places to Find Me</h1>
-            <a href="https://github.com/somebody4545">
-                <button>
-                    <h3><img src="https://raw.githubusercontent.com/github/docs/main/assets/images/site/favicon.svg" alt="Github"></h3>
-                </button>
-            </a>
+            <div class="button-row">
+                <form action="https://github.com/somebody4545">
+                    <button>
+                        <h3><img src="https://raw.githubusercontent.com/github/docs/main/assets/images/site/favicon.svg"
+                                 alt="Github"></h3>
+                    </button>
+                </form>
+                <form action="https://www.linkedin.com/in/ineshdey/">
+                    <button>
+                        <h3><img src="https://content.linkedin.com/content/dam/me/brand/en-us/brand-home/logos/In-Blue-Logo.png.original.png"
+                                 alt="LinkedIn"></h3>
+                    </button>
+                </form>
+                <form action="https://youtube.com/@somebody4545">
+                    <button>
+                        <h3><img style="width:30px" src="/static/images/yt_icon_mono_light.svg"
+                                 alt="YouTube"></h3>
+                    </button>
+                </form>
+            </div>
         </div>
     </section>
     <section class="wide-box secondary copyright">
