--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -80,9 +80,7 @@
                     </a>
                 </div>
                 <div class="project">
-                    <div>
-                        <img src="/static/images/ecocollab.png" style="width:100%" alt="">
-                    </div>
+                        <img src="/static/images/ecocollab.png" alt="">
                     <h2>EcoCollab</h2>
                     <p>Project for EMP Hackfest's SmartHack. Won best programming award.</p>
                     <a href="https://devpost.com/software/restoration-hub?ref_content=user-portfolio&ref_feature=in_progress">
