--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -82,7 +82,7 @@
                 <div class="project">
                         <img src="/static/images/ecocollab.png" alt="">
                     <h2>EcoCollab</h2>
-                    <p>Project for EMP Hackfest's SmartHack. Won best programming award.</p>
+                    <p>Project for EmP Hackfest's SmartHack. Won best programming award.</p>
                     <a href="https://devpost.com/software/restoration-hub?ref_content=user-portfolio&ref_feature=in_progress">
                         <button class="see">See it!</button>
                     </a>
