--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -80,7 +80,9 @@
                     </a>
                 </div>
                 <div class="project">
-                        <img src="/static/images/ecocollab.png" alt="">
+
+                    <div>
+                        <img src="/static/images/ecocollab.png" alt=""></div>
                     <h2>EcoCollab</h2>
                     <p>Project for EmP Hackfest's SmartHack. Won "Outstanding Code" award sponsored by AoPS.</p>
                     <a href="https://devpost.com/software/restoration-hub?ref_content=user-portfolio&ref_feature=in_progress">
