--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -124,7 +124,7 @@
                 </form>
                 <form action="https://www.linkedin.com/in/ineshdey/">
                     <button>
-                        <h3><img src="https://content.linkedin.com/content/dam/me/brand/en-us/brand-home/logos/In-Blue-Logo.png.original.png"
+                        <h3><img src="/static/images/linkedin.svg"
                                  alt="LinkedIn"></h3>
                     </button>
                 </form>
