--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -33,8 +33,8 @@
     </section>
     <section class="wide-box">
         <div class="center-text">
-            <h1 id="hi">Hi</h1>
-            <p>this is a website</p>
+            <h1 id="hi">Hi!</h1>
+            <p style="padding-left: 50px; padding-right: 50px">I build websites, play the guitar, 3d model, and grind my homework. Here are some of the things I have done! (or will do, when the time is right)</p>
             <!--            <a href="https://somebody4545.repl.co">-->
             <!--                <button>-->
             <!--                    <h3>Go to old site</h3>-->
@@ -51,11 +51,12 @@
                         <canvas id="FlowMaster" loading="eager"></canvas>
                     </div>
                     <h2>FlowMaster</h2>
+                    <h5>Winter 2023</h5>
                     <p>Made with <a href="https://github.com/anirudhnara">Anirudh</a>, <a
                             href="https://github.com/ElectroChess">Pranith</a>, and <a
                             href="https://github.com/AliMacky">Ali</a> for HackPNW 2023</p>
                     <!--                    <a href="https://flowmaster.mythify.repl.co/">-->
-                    <button class="see dead">dead link >:( blame replit</button>
+                    <button class="see dead">dead link >:( (blame replit)</button>
                     <!--                    </a>-->
                 </div>
                 <div class="project">
@@ -63,7 +64,8 @@
                         <h3 class="center-text">still working on this model...</h3>
                     </div>
                     <h2>Raspberry Pi + Stripe website demo</h2>
-                    <p>Just a fun summer project.</p>
+                    <h5>Summer 2023</h5>
+                    <p>Just a fun little low stakes project.</p>
                     <a href="https://github.com/somebody4545/Raspberry-Pi-Stripe-Demo">
                         <button class="see">See it!</button>
                     </a>
@@ -73,6 +75,7 @@
                         <canvas id="DCR" loading="eager"></canvas>
                     </div>
                     <h2>DCR</h2>
+                    <h5>Fall 2023</h5>
                     <p>Old monitor doesn't have Dynamic Contrast Ratio? Try this! Made this for an old monitor to be
                         repurposed as a TV.</p>
                     <a href="https://github.com/somebody4545/DCR">
@@ -80,10 +83,10 @@
                     </a>
                 </div>
                 <div class="project">
-
                     <div>
                         <img src="/static/images/ecocollab.png" alt=""></div>
                     <h2>EcoCollab</h2>
+                    <h5>Winter 2024</h5>
                     <p>Project for EmP Hackfest's SmartHack. Won "Outstanding Code" award sponsored by AoPS.</p>
                     <a href="https://devpost.com/software/restoration-hub?ref_content=user-portfolio&ref_feature=in_progress">
                         <button class="see">See it!</button>
@@ -94,6 +97,7 @@
                         <h1 class="center-text">?</h1>
                     </div>
                     <h2>Blog (in progress)</h2>
+                    <h5>???</h5>
                     <p>Making a fun blog site coming in the near future</p>
                     <!--                    <a href="https://devpost.com/software/restoration-hub?ref_content=user-portfolio&ref_feature=in_progress">-->
                     <button class="see dead">Haha... not yet</button>
@@ -108,8 +112,8 @@
         </div>
         <div class="center-text">
             <h1>Blender?</h1>
-            <p>blender.</p>
-            <h6>(try tapping on this one)</h6>
+            <p>blender. (omg recursive blender?!?!?!?!)</p>
+            <h5>(try tapping on this one)</h5>
         </div>
     </section>
     <section class="wide-box secondary" id="contact-me">
@@ -139,10 +143,12 @@
     </section>
     <section class="wide-box secondary copyright">
         <div class="center-text">
-            <a href="https://github.com/somebody4545/website2.0/blob/main/LICENSE.md"><p>© 2023 Inesh Dey under
+            <a href="https://github.com/somebody4545/website2.0/blob/main/LICENSE.md"><p>© 2024 Inesh Dey under
                 GPLv3</p></a>
+            <a href="https://github.com/somebody4545/website2.0/"><p style="padding-left: 50px; padding-right: 50px">source code is public on GitHub, you can use it as per the license above :)</p></a>
         </div>
     </section>
+    <a href="https://web.archive.org/web/20230403105538/https://somebody4545.repl.co/"><p style="text-align: center">E̷͓̐͆N̵̞̔͜T̴̼̉E̵̼͆̂Ȓ̷̮̄ ̵͔̕T̶̡̍H̴̡͙̓Ê̷͎̥͝ ̷̛̼̦T̶̛͇I̸̽͜M̸̬̐͛E̸̢̝͆̇ ̸̨̹̈C̵̱̹̀͛A̵̤͚̓P̸̻̥͐Ś̵̭̟Ǘ̸̫L̸̢̥͝E̷̲͝</p></a>
 </div>
 <script src="/static/js/load.js"></script>
 <script src="/static/js/parallaxbg.js"></script>
