bugfix i should have made AGES ago

--- a/api/static/css/index.css
+++ b/api/static/css/index.css
@@ -223,7 +223,7 @@ button:active img{
 
 .project {
     text-align: left;
-    overflow: auto;
+    overflow: visible;
     padding-top: 50px;
     padding-bottom: 50px;
 }
