--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -94,6 +94,17 @@
                 </div>
                 <div class="project">
                     <div>
+                        <canvas id="wtn2024" loading="eager"></canvas>
+                    </div>
+                    <h2>Teen Mental Health in Washington</h2>
+                    <h5>Spring 2024</h5>
+                    <p>Project for <a href="https://doh.wa.gov/data-and-statistical-reports/washington-tracking-network-wtn/youth-science-contest">Washington Tracking Network Youth Science Contest!</a> We took the Science Communication track.</p>
+                    <a href="https://wtn-project.vercel.app/">
+                        <button class="see">See it!</button>
+                    </a>
+                </div>
+                <div class="project">
+                    <div>
                         <h1 class="center-text">?</h1>
                     </div>
                     <h2>Blog (in progress)</h2>
