--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -97,7 +97,7 @@
                     </div>
                     <h2>Teen Mental Health in Washington</h2>
                     <h5>Spring 2024</h5>
-                    <p>Project for <a href="https://doh.wa.gov/data-and-statistical-reports/washington-tracking-network-wtn/youth-science-contest">Washington Tracking Network Youth Science Contest!</a> We took the Science Communication track.</p>
+                    <p>Project for <a href="https://doh.wa.gov/data-and-statistical-reports/washington-tracking-network-wtn/youth-science-contest">Washington Tracking Network Youth Science Contest!</a> We placed second in the Science Communication track.</p>
                     <a href="https://wtn-project.vercel.app/">
                         <button class="see">See it!</button>
                     </a>
