--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -148,6 +148,12 @@
                                  style="width:30px"></h3>
                     </button>
                 </form>
+                <form action="https://www.flickr.com/photos/somebody4545/">
+                    <button>
+                        <h3><img alt="Flickr" src="https://upload.wikimedia.org/wikipedia/commons/3/31/Flickr_font_awesome.svg"
+                                 style="width:30px"></h3>
+                    </button>
+                </form>
             </div>
         </div>
     </section>
